--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@supabase/supabase-js": "^2.51.0",
     "expo": "~53.0.9",
     "expo-router": "^5.0.7",
     "expo-status-bar": "~2.2.3",
